objects/ASI_MFM_Channel_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ASI_MFM_Channel_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ASI_MFM_Channel_Mapping1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>ASI MFM Channel Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Channel__c</columns>
        <columns>ASI_MFM_Customer__c</columns>
        <columns>ASI_MFM_Percentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>ASI MFM Channel Allocation Ref Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI MFM Channel Allocations</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_Gulf_Channel_Allocation</fullName>
        <active>true</active>
        <label>ASI MFM Gulf Channel Allocation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>